# recodeX

./: EXAMPLE_CONFIG.md  README.md  demo_improvements.py  pyproject.toml  recodex.db  start_demo_web.py
.github/: copilot-instructions.md
recodex/: __init__.py
recodex/cli/: __init__.py
recodex/config/: __init__.py  config.yaml
recodex/core/: __init__.py
recodex/database/: __init__.py
recodex/monitoring/: __init__.py
recodex/web/: __init__.py  __init__.py.backup
recodex/web/templates/: config.html  dashboard.html
recodex/workers/: __init__.py
tests/: test_config.py  test_core.py  test_file_monitoring_fix.py  test_job_management.py  test_profile_lookup.py  test_web_api.py
